[package]
name = "geo_tiler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "geo_tiler"
path = "src/main.rs"

[dependencies]
d3_geo_rs = "3.1.0"
ghx_constrained_delaunay = "0.2.0"
nalgebra = "0.33.2"
geojson = "0.24.2"
geo-clipper = "0.9.0"
geo-types = "0.7.16"

[dev-dependencies]
approx = "0.5.1"