[package]
name = "geo_tiler"
version = "0.1.1"
edition = "2024"
authors = ["Thomas Spina <thomas@thomasspina.com>"]
description = "Convert 2D geographic polygons into 3D spherical meshes for globe rendering"
readme = "README.md"
homepage = "https://github.com/thomasspina/geo_tiler"
repository = "https://github.com/thomasspina/geo_tiler"
license = "MIT"
keywords = ["geo", "mesh", "sphere", "triangulation", "geojson"]
categories = ["science::geo", "graphics", "rendering"]

[[bin]]
name = "geo_tiler"
path = "src/main.rs"

[dependencies]
d3_geo_rs = "3.1.0"
ghx_constrained_delaunay = "0.2.0"
nalgebra = "0.33.2"
geojson = "0.24.2"
geo-booleanop = "0.3.2"
geo = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
approx = "0.5.1"